@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: ipmipower.conf.5.in,v 1.35 2007-04-28 20:06:40 chu11 Exp $
+\."$Id: ipmipower.conf.5.in,v 1.36 2007-07-11 00:16:04 chu11 Exp $
 \."#############################################################################
 \."  Copyright (C) 2003 The Regents of the University of California.
 \."  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -124,7 +124,7 @@ Specify if consolidate-output is enabled or disabled by default.
 Specify if eliminate is enabled or disabled by default.
 .TP
 .I workaround-flags str
-Specify default workaround flags to use: "forcepermsg", "idzero", "unexpectedauth", "intel20", "supermicro20"
+Specify default workaround flags to use: "forcepermsg", "idzero", "unexpectedauth", "endianseq", "intel20", "supermicro20", "sun20"
 .TP
 .I timeout ms
 Specify the timeout in ms.
